2004-12-17  Andrew Haley  <aph@redhat.com>

PR java/18931
        * typeck.c (convert): Use a CONVERT_EXPR when converting to
        BOOLEAN_TYPE or CHAR_TYPE.
        (convert_to_boolean, convert_to_char) : Remove.
        * convert.h (convert_to_boolean, convert_to_char) : Remove.
        * expr.c (expand_load_internal): Do type conversion if type is not
        as required.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@92314 138bc75d-0d04-0410-961f-82ee72b054a4